fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ div.outer{
 	display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 div.map{
